make item tooltips not appear offscreen horizontally. still need to fix vertically. add functions for glacial augment and first strike. change keystone calculations to not do any rounding when there are no ratios being multiplied. make keystone current values and cooldowns not show if not needed. change item tooltip background color and remove hr from showing.

--- a/src/App.css
+++ b/src/App.css
@@ -300,18 +300,15 @@ span + img {
 
 #itemsLeft, #itemsRight {
   width: 45vw;
-  text-align: center;
 }
 
 .itemDisplay {
+  text-wrap: balance;
   background: linear-gradient(#003747, #134f61);
-  height: 157px;
+  max-height: 208px;
   overflow-y: auto;
   text-align: left;
-  /*padding-top: 4px;
-  padding-left: 2em;
-  padding-right: 8px;*/
-  border-radius: 4px;
+  padding-top: 4px;
   border-image-slice: 27 27 53 50;
   border-image-width: 5px 5px 4.7px 4.5px;
   border-image-outset: 2px 2px 2px 2px;
@@ -329,21 +326,22 @@ span + img {
   cursor: pointer;
 }
 
-.itemMenu input {
-  width: 12em;
-  height: 23px;
-}
-
 .itemTooltip {
   position: absolute;
-  background: rgb(33, 33, 33);
+  /*background: rgb(33, 33, 33);*/
+  background: hsl(194, 67%, 6%);
   opacity: 1;
   display: none;
   width: 400px;
-  max-height: 500px;
-  border: 1px solid #ffffb9;
   padding: 5px;
   z-index: 100;
+  /*border-image-slice: 27 27 53 50;
+  border-image-outset: 2px 2px 2px 2px;
+  border-image-repeat: stretch stretch;
+  border-image-source: url(./images/border-image-2.png);
+  border-image-width: 5px;*/
+  border: 3px double white;
+  text-align: left;
 }
 
 .itemTooltip:hover {
@@ -352,14 +350,6 @@ span + img {
 
 .itt:hover > .itemTooltip {
   display: block;
-}
-
-.iTTLeft {
-  left: 20px
-}
-
-.iTTRight {
-  right: 20px
 }
 
 .itemTooltip i {
@@ -393,8 +383,9 @@ span + img {
 hr {
   border: 0;
   height: 1px;
-  background-image: linear-gradient(to right, #f9b54a 0%, #f9b54a 9%, rgba(0, 0, 0, 0.2) 10%,
+  /*background-image: linear-gradient(to right, #f9b54a 0%, #f9b54a 9%, rgba(0, 0, 0, 0.2) 10%,
    #f9b54a 15%, #f9b54a 85%, rgba(0, 0, 0, 0.2) 90%, #f9b54a 91%);
+  background-image: linear-gradient(rgb(177, 41, 238), rgb(6,197,254));*/
 }
 
 .abilityBoxLeft, .abilityBoxRight {
